configurations/openshift/deployment/legitinfo-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f configurations/docker/docker-compose.yaml --out configurations/openshift/deployment/ convert
    kompose.service.healthcheck.readiness.interval: 10s
    kompose.service.healthcheck.readiness.retries: "3"
    kompose.service.healthcheck.readiness.start_period: 120s
    kompose.service.healthcheck.readiness.test: CMD /usr/libexec/check-container
    kompose.service.healthcheck.readiness.timeout: 10s
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: legitinfo-db
  name: legitinfo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: legitinfo-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f configurations/docker/docker-compose.yaml --out configurations/openshift/deployment/ convert
        kompose.service.healthcheck.readiness.interval: 10s
        kompose.service.healthcheck.readiness.retries: "3"
        kompose.service.healthcheck.readiness.start_period: 120s
        kompose.service.healthcheck.readiness.test: CMD /usr/libexec/check-container
        kompose.service.healthcheck.readiness.timeout: 10s
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: legitinfo-db
    spec:
      containers:
        - env:
            - name: POSTGRESQL_DATABASE
              valueFrom:
                secretKeyRef:
                  name: postgresql
                  key: database-name
            - name: POSTGRESQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgresql
                  key: database-password
            - name: POSTGRESQL_USER
              valueFrom:
                secretKeyRef:
                  name: postgresql
                  key: database-user
          image: registry.redhat.io/rhscl/postgresql-13-rhel7:latest
          livenessProbe:
            exec:
              command:
                - /usr/libexec/check-container '--live'
            failureThreshold: 120
            periodSeconds: 5
            timeoutSeconds: 10
          name: legitinfo-db
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command:
                - /usr/libexec/check-container
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 10
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: postgresql-data
      restartPolicy: Always
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-data
status: {}
