configurations/openshift/deployment/legitinfo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: legitinfo
  name: legitinfo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: legitinfo
    weight: null
status: {}
